# LedgerFlow

./: .gitignore  CMakeLists.txt  DESIGN.md  MVP.md  README.md
app/: main.cpp
conf/: dev_config.json
include/ledgerflow/: config.hpp  event_parser.hpp  position_engine.hpp  protocol.hpp  server.hpp  shutdown_manager.hpp
include/ledgerflow/core/: account.hpp  calculations.hpp  config_loader.hpp  decoder.hpp  enums.hpp  event_mapper.hpp  events.hpp  journal.hpp  ring_buffer.hpp  types.hpp
include/ledgerflow/io/: socket.hpp  uring_channel.hpp
include/ledgerflow/wal/: sequencer.hpp  wal.hpp
proto/: ingress.proto
scripts/: compile_protos.sh  position_event_feeder.py
src/ledgerflow/: position_engine.cpp  server.cpp
src/ledgerflow/wal/: wal.cpp
test/: CMakeLists.txt  proto_smoke.cpp
test/benchmark/: BENCHMARK.md  CMakeLists.txt  position_engine_benchmark.cpp  wal_benchmark.cpp
test/unit/: CMakeLists.txt  event_mapper_test.cpp  position_engine_test.cpp  wal_append_test.cpp  wal_commit_test.cpp  wal_constructor_test.cpp  wal_io_test.cpp  wal_recover_test.cpp  wal_test_helpers.hpp
